<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/img_background"
   >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/ic_app"
                   android:layout_width="wrap_content"
                   android:layout_height="72dp"
                   android:layout_marginBottom="24dp"
                   android:layout_gravity="center_horizontal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textSize="@dimen/text_size_20sp"
            android:textColor="@color/myAccentColor"
            android:layout_gravity="center_horizontal"
            android:padding="12dp"
            android:text="@string/app_name"/>
        <!--  Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_name"
                      android:layout_width="match_parent"
                      android:textColor="@color/myAccentColor"
                      android:layout_height="wrap_content"
                      android:textColorHint="@color/myAccentColor"
                      android:inputType="textCapWords"
                      android:hint="Name" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_phone"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColor="@color/myAccentColor"
                      android:textColorHint="@color/myAccentColor"
                      android:inputType="number"
                      android:maxLength="11"
                      android:hint="Phone" />
        </android.support.design.widget.TextInputLayout>
        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_email"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColorHint="@color/myAccentColor"
                      android:textColor="@color/myAccentColor"
                      android:inputType="textEmailAddress"
                      android:hint="Email" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_password"
                      android:layout_width="match_parent"
                      android:textColorHint="@color/myAccentColor"
                      android:textColor="@color/myAccentColor"
                      android:layout_height="wrap_content"
                      android:inputType="textPassword"
                      android:hint="Password"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_re_password"
                      android:layout_width="match_parent"
                      android:textColor="@color/myAccentColor"
                      android:layout_height="wrap_content"
                      android:textColorHint="@color/myAccentColor"
                      android:inputType="textPassword"
                      android:hint="Re-Password"/>
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RadioGroup
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/myAccentColor"
                android:layout_marginRight="20dp"
                android:text="@string/chusan"
                android:layout_gravity="right"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/myAccentColor"
                android:layout_marginLeft="20dp"
                android:text="@string/khachang"
                android:layout_gravity="left"/>
        </RadioGroup>
        </LinearLayout>

        <!-- Signup Button -->

        <TextView
            android:id="@+id/btn_signUp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:gravity="center_horizontal"
            android:textColor="@color/myAccentColor"
            android:textSize="@dimen/text_size_20sp"
            android:layout_gravity="center_horizontal"
            android:padding="12dp"
            android:text="@string/signup"/>

        <TextView android:id="@+id/link_login"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textColor="@color/myAccentColor"
                  android:layout_marginBottom="24dp"
                  android:text="@string/link_login"
                  android:gravity="center"
                  android:textSize="16dip"/>

    </LinearLayout>
</ScrollView>